--- a/mobile_app/TransportationExpensesApp/app/src/main/AndroidManifest.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".IcReadActivity"
+            android:label="@string/title_ic_read_activity">
         </activity>
     </application>
 
