--- a/mobile_app/TransportationExpensesApp/app/src/main/AndroidManifest.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
             android:label="@string/title_ic_history_list_activity">
         </activity>
         <activity
+            android:name=".IcHistoryTableMakeActivity"
+            android:label="@string/title_ic_history_table_make_activity">
+        </activity>
+        <activity
             android:name=".IcReadActivity"
             android:label="@string/title_ic_read_activity">
         </activity>
