StationCode内部をただのStrに変更。 その代わりMainActivityのonCreate発火直後にStationCodeのStrへ StationCode.jsonを代入。

--- a/mobile_app/TransportationExpensesApp/app/src/main/AndroidManifest.xml
+++ b/mobile_app/TransportationExpensesApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.transportationexpenses">
 
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
+    <uses-permission android:name="android.permission.NFC" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,12 +31,21 @@
         </activity>
         <activity
             android:name=".IcReadHistoryListActivity"
-            android:label="@string/title_ic_read_history_list_activity">
+            android:label="@string/title_ic_read_history_list_activity"
+            android:permission="android.permission.NFC">
+            <intent-filter>
+                <action android:name="android.nfc.action.TECH_DISCOVERED"/>
+                <action android:name="android.nfc.action.TAG_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+            <meta-data android:name="android.nfc.action.TECH_DISCOVERED"
+                android:resource="@xml/nfc_tech_filter" />
         </activity>
         <activity
             android:name=".IcHistoryListSaveActivity"
             android:label="@string/title_ic_history_list_save_activity">
         </activity>
+
     </application>
 
 </manifest>
